--- a/TPIntegrador/templates/index.html
+++ b/TPIntegrador/templates/index.html
@@ -7,21 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de sesi&oacute;n</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='/images/favicon-32x32.png') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="{{ url_for('static', filename='/css/bootstrap.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='/css/index.css') }}" rel="stylesheet">
 </head>
 
 <body>
     <!-- Contenedor del Form de Usuario -->
-    <div class="container-fluid bgColor"> 
+    <div class="container-fluid bgColor">
         <form class="row row-cols-2 text-center justify-content-center size" action="{{ url_for('handle_user') }}" method="post">
-            <div class="card mt-5 mb-5" style="width: 30em;">
+            <div class="card">
                 <img src="{{ url_for('static', filename='/images/user.png') }}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <label for="inputUser" class="form-label fs-3">
                         Ingrese su nombre para comenzar
                     </label> 
-                <input type="text" class="form-control mb-3" id="inputUser" name="inputUser" aria-describedby="inputUser"/>
+                <input type="text" class="form-control mb-3" id="inputUser" name="inputUser" aria-describedby="inputUser" pattern="[a-zA-Z]+"/>
                 <h5 class="text-danger mb-3">{{error}}</h5>
                 <button type="submit" class="btn btn-success col-12 fs-4" id="btnOkUser" name="btnOkUser">
                     Listo
@@ -31,16 +31,15 @@
         </form>
     </div>
 
-    <!-- Imports de JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script  src="{{ url_for('static', filename='/js/script.js') }}"></script>
+    <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 shadowFooter">
+      <ul class="nav col-lg-12 justify-content-around w-75">
+        <li class="nav-item"><a href="#" class="nav-link text-white px-3 fs-4">Nosotres</a></li>
+        <li class="nav-item"><a href="#" class="nav-link text-white px-3 fs-4">Repositorio</a></li>
+      </ul>
+    </footer>
+
+    <script src="../static/js/bootstrap.bundle.js"></script>
 </body>
 
-<footer class="d-flex flex-wrap justify-content-center align-items-center py-3 shadowFooter">
-  <ul class="nav col-lg-12 justify-content-around w-75">
-    <li class="nav-item"><a href="#" class="nav-link text-white px-3 fs-4">Nosotres</a></li>
-    <li class="nav-item"><a href="#" class="nav-link text-white px-3 fs-4">Repositorio</a></li>
-  </ul>
-</footer>
 
 </html>
