--- a/TPIntegrador/templates/index.html
+++ b/TPIntegrador/templates/index.html
@@ -23,7 +23,7 @@
                     </label> 
                 <input type="text" class="form-control mb-3" id="inputUser" name="inputUser" aria-describedby="inputUser" pattern="[a-zA-Z]+"/>
                 <h5 class="text-danger mb-3">{{error}}</h5>
-                <button type="submit" class="btn btn-success col-12 fs-4" id="btnOkUser" name="btnOkUser">
+                <button type="submit" class="btn col-12 fs-4" id="btnOkUser" name="btnOkUser">
                     Listo
                 </button>
                 </div>
@@ -32,10 +32,14 @@
     </div>
 
     <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 shadowFooter">
-      <ul class="nav col-lg-12 justify-content-around w-75">
-        <li class="nav-item"><a href="#" class="nav-link text-white px-3 fs-4">Nosotres</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-white px-3 fs-4">Repositorio</a></li>
-      </ul>
+        <ul class="nav col-lg-12 justify-content-around w-75">
+          <li class="nav-item">
+            <a href="#" class="nav-link text-white px-3 fs-4">Nosotres</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link text-white px-3 fs-4">Repositorio</a>
+          </li>
+        </ul>
     </footer>
 
     <script src="../static/js/bootstrap.bundle.js"></script>
