--- a/TPIntegrador/templates/question.html
+++ b/TPIntegrador/templates/question.html
@@ -10,19 +10,25 @@
 <div class="container-fluid bgColor">
   <h1 id="titleQuestion" class="row row-cols-2 text-center justify-content-center py-3">ESCALÓN {{step}}</h1>
   <h3 id="titleQuestion" class="justify-content-center text-center">VIDAS RESTANTES: {%for i in range(0, life)%}<i class="fas fa-heart ps-3 text-danger fa-beat animated"> </i>{%endfor%}{%for i in range(0, 3 - life)%}<i class="far fa-heart ps-3 text-secondary fa-beat animated"> </i>{%endfor%}</h3>
+<div class="container-fluid bgColor py-5">
+
   <input type="hidden" id="step" value="{{step}}" />
   <div class="container" >
-    <div class="progress" >
-      <div class="progress-bar progress-bar-striped progress-bar-animated " id="bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="125"></div>
-      <p id="msg"></p>
-    </div>
-  </div>
-  <form class="row row-cols-2 text-center justify-content-center py-3" action="{{ url_for('handle_data') }}" method="POST">
+    <strong>
+      <div class="progress" >
+        <div class="progress-bar progress-bar-striped progress-bar-animated" id="bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="125"></div>
+        <p id="msg"></p>
+        </div>
+      </div>
+    </strong>
+  <form class="row row-cols-2 text-center justify-content-center" action="{{ url_for('handle_data') }}" method="POST">
     <div class="card" style="width: 30em">
     <div class="card-body mb-4">
-      <h2 class="card-title mt-4">¿{{ data['pregunta'] }}?</h2>
+      <h2 class="card-title mt-4">&iquest;{{ data['pregunta'] }}?</h2>
     </div>
+
     <ul class="list-group list-group-flush">
+
       <li class="list-group-item">
         <div class="form-check">
           <input
@@ -37,6 +43,7 @@
           </label>
         </div>
       </li>
+
       <li class="list-group-item">
         <div class="form-check">
           <input
@@ -51,6 +58,7 @@
           </label>
         </div>
       </li>
+
       <li class="list-group-item">
         <div class="form-check">
           <input
@@ -65,24 +73,26 @@
           </label>
         </div>
       </li>
-    </ul>
-    <input class="d-none" name="correcto" value="{{data['respuesta']}}" >
-    </input>
 
-    <div class="card-body fs-5">
+    </ul>
+
+    <input class="d-none" name="correcto" value="{{data['respuesta']}}"></input>
+
+    <div class="card-body  fs-5">
       <a class="card-link"><button
         type="submit"
-        class="btn"
+        class="btn col-12"
         id="btnNext"
         name="btnNext"
         value="{{ step }}"
-      >SIGUIENTE
-      </button></a>
-    </div>
+      >SIGUIENTE 
+      <i class="fa-solid fa-angles-right"></i>
+    </button></a>
+  </div>
+  
   </div>
 </form>
 </div>
-
 
 <!--Previo cierre body-->
 {% endblock %}
