--- a/TPIntegrador/templates/layout.html
+++ b/TPIntegrador/templates/layout.html
@@ -10,40 +10,43 @@
     {% endblock %}
     <script src="../static/js/jquery-3.5.1.js"></script>
     <link rel="shortcut icon" href="{{ url_for('static', filename='/images/favicon-32x32.png') }}"/>
-    <link href="{{ url_for('static', filename='/css/bootstrap.css') }}" rel="stylesheet" defer>
+    <link href="{{ url_for('static', filename='/css/bootstrap.css') }}" rel="stylesheet">
     <link href="../static/css/all.css" rel="stylesheet" defer/>
     <link href="{{ url_for('static', filename='/css/font-awesome-animation.css') }}" rel="stylesheet" defer>
-    <link href="{{ url_for('static', filename='/css/index.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='/css/index.css') }}" rel="stylesheet" defer/>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg bg-light shadow p-3 mb-5 rounded">
       <div class="container-fluid">
-        <form action="{{ url_for('settings_home') }}" method="post">
+
+        <form action="{{ url_for('settings_home') }}" method="POST">
           <button type="submit" class="btn" value="true" name="reloadHome">
             <img src=" {{ url_for('static', filename='/images/logo.png') }} " alt="logo" height="100"/>
           </button>
         </form>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
-            <form action="{{ url_for('settings_game') }}" method="post">
+            <form action="{{ url_for('settings_game') }}" method="POST">
               <li class="nav-item flipX">
                 <button type="submit" class="btn fs-2 txt-navbar" value="true" name="reloadGame">
                   ¡Vamos a jugar!
                 </button>
               </li>
             </form>
-            <form action="{{ url_for('queryScores') }}" method="post">
+            <form action="{{ url_for('queryScores') }}" method="POST">
               <li class="nav-item flipX">
                 <button type="submit" class="btn fs-2 txt-navbar" value="true" name="queryScores">
                   Consultas
                 </button>
               </li>
             </form>
-            <form action="{{ url_for('addQuestion') }}">
+            <form action="{{ url_for('addQuestion') }}" method="POST">
               <li class="nav-item flipX">
                 <button type="submit" class="btn btn-light fs-2 txt-navbar" value="true" name="addQuestion">
                   Añadir pregunta
@@ -52,6 +55,7 @@
             </form>
           </ul>
         </div>
+
         <form action="{{ url_for('exit') }}" method="post">
           <button type="submit" class="btn btnExit" value="true" name="exit">
             SALIR
@@ -75,7 +79,6 @@
     </footer>
 
     <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/bootstrap.bundle.js"></script>
   </body>
 
 </html>
