--- a/TPIntegrador/templates/addQuestion.html
+++ b/TPIntegrador/templates/addQuestion.html
@@ -2,31 +2,31 @@
 {%block title%}añadir preguntas{%endblock%}
 
 {%block body%}
-<div class="container w-50">
+<div class="container">
     <form class="row row-cols-1 justify-content-center" action="{{ url_for('addQuestion') }}" method="POST">
         <div class="col mb-3 ">
             <label for="questionInput" class="form-label">Ingrese la pregunta a añadir</label>
-            <input type="text" class="form-control" id="questionInput" name="questionInput" placeholder="¿ Qué lenguajes más comunes son de alto nivel?">
+            <input type="text" class="form-control" id="questionInput" name="questionInput" placeholder="¿ Qué lenguajes más comunes son de alto nivel?" required>
           </div>
           <div class="col col-sm-12  mb-3">
             <label for="questionOptionA" class="form-label">Opción A:</label>
-            <input type="text" class="form-control" id="questionOptionA" name="questionOptionA" placeholder="...">
+            <input type="text" class="form-control" id="questionOptionA" name="questionOptionA" placeholder="..." required>
         </div>
         <div class="col col-sm-12 mb-3">
             <label for="questionOptionB" class="form-label">Opción B:</label>
-            <input type="text" class="form-control" id="questionOptionB" name="questionOptionB" placeholder="...">
+            <input type="text" class="form-control" id="questionOptionB" name="questionOptionB" placeholder="..." required>
         </div>
         <div class="col mb-3">
             <label for="questionOptionC" class="form-label">Opción C:</label>
-            <input type="text" class="form-control" id="questionOptionC" name="questionOptionC" placeholder="...">
+            <input type="text" class="form-control" id="questionOptionC" name="questionOptionC" placeholder="..." required>
         </div>
         <div class="col mb-3">
             <label for="questionOptionD" class="form-label">Opción D:</label>
-            <input type="text" class="form-control" id="questionOptionD" name="questionOptionD" placeholder="...">
+            <input type="text" class="form-control" id="questionOptionD" name="questionOptionD" placeholder="..." required>
         </div>
         <div class="col mb-3">
             <label for="respuestaSelector" class="form-label">Respuesta correcta:</label>
-            <select class="form-select" aria-label="Default_select" id="respuestaSelector" name="respuestaSelector" placeholder="...">
+            <select class="form-select" aria-label="Default_select" id="respuestaSelector" name="respuestaSelector" placeholder="..." required>
                 <option selected disabled>Seleccione...</option>
                 <option value="questionOptionA">A</option>
                 <option value="questionOptionB">B</option>
@@ -37,7 +37,7 @@
 
         <div class="col mb-3">
         <label for="escalonSelector" class="form-label">Escalón a añadir la pregunta:</label>
-        <select class="form-select" aria-label="Default_select" id="escalonSelector" name="escalonSelector">
+        <select class="form-select" aria-label="Default_select" id="escalonSelector" name="escalonSelector" required>
             <option selected disabled>Seleccione...</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -50,10 +50,10 @@
           </select>
         </div>
         <p class="text-danger mb-4 fs-6">{{error}}</p>
-        <div class="col mb-3">
+        <div class="col mb-3 text-center">
             <button
               type="submit"
-              class="btn btn-info"
+              class="btn btn-info col-6 "
               id="btnAddQuestion"
               name="btnAddQuestion"
             >AÑADIR PREGUNTA
