--- a/TPIntegrador/templates/question.html
+++ b/TPIntegrador/templates/question.html
@@ -1,17 +1,15 @@
 {% extends './layout.html' %}
 {%block title%}Preguntas{%endblock%}
 {%block plugins%}
-  <script src="../static/js/jquery-3.5.1.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script src="../static/js/progreesBar.js" defer></script> 
   <script src="../static/js/checkButtons.js" defer></script>    
 {%endblock%}
 {% block body %}
 
-<div class="container-fluid bgColor">
+<!-- 
   <h1 id="titleQuestion" class="row row-cols-2 text-center justify-content-center py-3">ESCALÓN {{step}}</h1>
-  <h3 id="titleQuestion" class="justify-content-center text-center">VIDAS RESTANTES: {%for i in range(0, life)%}<i class="fas fa-heart ps-3 text-danger fa-beat animated"> </i>{%endfor%}{%for i in range(0, 3 - life)%}<i class="far fa-heart ps-3 text-secondary fa-beat animated"> </i>{%endfor%}</h3>
-<div class="container-fluid bgColor py-5">
+
+  <div class="container-fluid bgColor py-5">
 
   <input type="hidden" id="step" value="{{step}}" />
   <div class="container" >
@@ -21,9 +19,23 @@
         <p id="msg"></p>
         </div>
       </div>
-    </strong>
+    </strong> -->
+<div class="container-fluid bgColor">
+  <input type="hidden" id="step" value="{{step}}" />
+  <div class="container py-5" >
+    <div class="row text-center align-items-center" id="containerBar" >
+    <h1 id="titleQuestion" class="col-2">ESCALÓN: </h1>
+    <div class="col-10 container progress" >
+      <div class="progress-bar progress-bar-striped progress-bar-animated " id="bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="125"></div>
+      <p id="msg"></p>
+    </div>
+  </div>
+    <h3 id="lives" class="justify-content-center text-center my-3">VIDAS RESTANTES: {%for i in range(0, life)%}<i class="fas fa-heart ps-3 text-danger fa-beat animated"> </i>{%endfor%}{%for i in range(0, 3 - life)%}<i class="far fa-heart ps-3 text-secondary fa-beat animated"> </i>{%endfor%}</h3>
+  </div>
+
+
   <form class="row row-cols-2 text-center justify-content-center" action="{{ url_for('handle_data') }}" method="POST">
-    <div class="card" style="width: 40em" id="cardGroup">
+    <div class="card cardQuestion" >
     <div class="card-body mb-4">
       <h4 class="card-title mt-4">&iquest;{{ data['pregunta'] }}?</h4>
     </div>
@@ -35,14 +47,11 @@
         name="option"
         id="a"
         value="{{data['a']}}"
-        autocomplete="off"
       />
       <label class="btn btnQuestionCheck fs-3 text-white fw-bold" onclick="onHandleClick(this)" for="a">
         {{data['a']}}
       </label>
     </div>
-
-  
     
       <div class="form-check">
       <input
@@ -51,13 +60,11 @@
         name="option"
         value="{{data['b']}}"
         id="b"
-        autocomplete="off"
       />
       <label class="btn btnQuestionCheck fs-3 text-white fw-bold" onclick="onHandleClick(this)" for="b">
         {{data['b']}}
       </label>
     </div>
-
 
     <div class="form-check">
       <input
@@ -66,15 +73,12 @@
         name="option"
         value="{{data['c']}}"
         id="c"
-        autocomplete="off"
       />
       <label class="btn btnQuestionCheck fs-3 text-white fw-bold" onclick="onHandleClick(this)" for="c">
         {{data['c']}}
       </label>
     </div> 
  
-
-  
     <div class="form-check">
       <input
         class="btn-check"
@@ -82,7 +86,6 @@
         name="option"
         value="{{data['d']}}"
         id="c"
-        autocomplete="off"
       />
       <label class="btn btnQuestionCheck fs-3 text-white fw-bold" onclick="onHandleClick(this)" for="d">
         {{data['d']}}
@@ -93,7 +96,8 @@
     <input class="d-none" name="correcto" value="{{data['respuesta']}}"></input>
 
     <div class="card-body  fs-5">
-      <a class="card-link"><button
+      <a class="card-link">
+        <button
         type="submit"
         class="btn col-12"
         id="btnNext"
