--- a/TPIntegrador/templates/question.html
+++ b/TPIntegrador/templates/question.html
@@ -30,7 +30,7 @@
       <p id="msg"></p>
     </div>
   </div>
-    <h3 id="lives" class="justify-content-center text-center my-3">VIDAS RESTANTES: {%for i in range(0, life)%}<i class="fas fa-heart ps-3 text-danger fa-beat animated"> </i>{%endfor%}{%for i in range(0, 3 - life)%}<i class="far fa-heart ps-3 text-secondary fa-beat animated"> </i>{%endfor%}</h3>
+    <h3 id="lives" class="justify-content-center text-center my-3">VIDAS RESTANTES: {%for i in range(0, life)%}<i class="fas fa-heart ps-3 text-danger fa-beat animated"> </i>{%endfor%}{%for i in range(0, 3 - life)%}<i class="far fa-heart ps-3 text-secondary"> </i>{%endfor%}</h3>
   </div>
 
 
